--- a/eas.json
+++ b/eas.json
@@ -1,31 +1,18 @@
 {
-  "cli": {
-    "version": ">= 3.9.3"
-  },
   "build": {
-    "development": {
-      "developmentClient": true,
-      "distribution": "internal",
-      "ios": {
-        "resourceClass": "m-medium"
-      }
-    },
     "preview": {
-      "ios": {
-        "resourceClass": "m-medium",
-        "simulator": true
-      },
       "android": {
         "buildType": "apk"
       }
     },
-    "production": {
-      "ios": {
-        "resourceClass": "m-medium"
+    "preview2": {
+      "android": {
+        "gradleCommand": ":app:assembleRelease"
       }
-    }
-  },
-  "submit": {
+    },
+    "preview3": {
+      "developmentClient": true
+    },
     "production": {}
   }
 }
